{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MechaBattleInput",
            "id": "1ece4267-24e1-4d81-a6b1-405a9d7c51cb",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "5a64d0f6-9a46-49fe-834c-30f69d7569b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "78be1988-5a9e-4d77-a087-54214b8a8a85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MouseMiddleClick",
                    "type": "Button",
                    "id": "dcdf1bc6-6254-491a-874a-b162a7d558d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bd466e74-41ff-4ec2-9bc2-c86fdc792344",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill_0",
                    "type": "Button",
                    "id": "10804770-1f15-4fa3-ab77-f9c65eda1450",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Skill_1",
                    "type": "Button",
                    "id": "d54c8a7b-ae23-43b7-b6a4-ea80959376ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Skill_2",
                    "type": "Button",
                    "id": "797408c5-59fe-4154-b3ea-9afca0591bb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Skill_3",
                    "type": "Button",
                    "id": "f027c168-eca3-48e2-be31-6edf44e526b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e4a4021e-82f8-43f0-885a-287d2c76bf59",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Skill_0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e531402-3a0b-4fe2-a31f-1bfe037f8fb8",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill_0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7772607d-1167-445b-92d2-25c88f0895f1",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill_0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21be93bb-0e5c-4a59-b6f3-9b516c74bedb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Skill_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f494aa8-d790-488f-92ed-eb872ff00203",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e433f5f4-1da6-4811-8a30-9779dcf2f46a",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da13915c-fa95-4a85-9caf-88322ccb72bf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Skill_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d159f5b1-f423-44d0-8b13-93a264559f9b",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b16342ce-bb49-4a47-93ec-c85b88ac524e",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6bae345-756c-4b79-9f20-2a60951a487a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Skill_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5f6a9ce-ecd9-4c21-b3ba-78b1d1497938",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed93d23b-9510-4320-85f3-98f8c1377c0f",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1badfae2-bf1a-445a-bfee-f4de44f3323c",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseMiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "637e2b3c-750a-46c5-b9fd-c4a1cc798878",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "772f6319-2147-4b31-9912-a5af4efc436d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa9bcc24-85ce-491a-ad30-60acc3a6e5b5",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "6b95673d-8a12-412a-9390-8184253550b8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b0ca1bb8-34d0-457b-8918-390c38c82bf3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5faf8d5b-04de-42a3-80e9-df1147142717",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e9718a4c-1f96-49cf-8f1f-0f1f9488a89f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5e2988c1-cf9c-4a5c-aaeb-3d177349c4e8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MechaBuildingInput",
            "id": "e3b1181f-7121-4f94-89e7-addd0d7b9803",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "015b758b-31e4-4e14-ab9d-383d30922006",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "dfc6415d-0fa1-4f02-897c-0a00d4f2c106",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MouseMiddleClick",
                    "type": "Button",
                    "id": "91a6bbaa-0bcc-4eb3-b451-59fa66970d2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RotateItem",
                    "type": "Button",
                    "id": "097c04ba-5832-435d-8a3d-368f89c5f76b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "ToggleBackpack",
                    "type": "Button",
                    "id": "9c4bb76c-4707-4e5c-a7f3-74e9d4fe4aa9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "ToggleWireLines",
                    "type": "Button",
                    "id": "ab7dc26b-d210-49a5-bc1e-93e822716dbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "ToggleDebug",
                    "type": "Button",
                    "id": "ff7e40b2-232a-4a3e-bd3c-5911d1a7078e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "631bf7b5-0411-4e1c-a8bb-042821cc53d0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55efd318-f9f9-4475-b5a8-b4074461a8a9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "RotateItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f36765b4-70ff-4ede-b1f7-71db8bd78fd1",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ToggleBackpack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b23b49ab-92c7-4c71-9d25-26e508838519",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f46ccae-7a7e-4634-b2f9-1e1afb241b88",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseMiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da559815-77f3-4f03-aa50-6e7dfd6bc3e7",
                    "path": "<Keyboard>/U",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ToggleDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18410dfb-989a-4efe-b6ca-8529847e146b",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ToggleWireLines",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Common",
            "id": "7e89e9d1-f7e1-49a8-bcc4-018eff99152e",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "1c84be6d-be71-459a-b015-48d29931e2a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "01504029-9327-4d64-ae1b-ea8d51e2a146",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MouseMiddleClick",
                    "type": "Button",
                    "id": "d3ecfc04-fec2-4614-8ff5-618873f00b28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c83e4c16-d1ae-4077-a4aa-f05b0242551a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseWheel",
                    "type": "Value",
                    "id": "ba2cb947-1326-4fed-81cd-9f68513c63cc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "c221a3f9-4221-4da1-b188-bf04e006da04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "21fa8e64-6108-4648-bbba-0381934760dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "9c95a13c-9036-4cae-9675-0ddef4b52926",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Debug",
                    "type": "Button",
                    "id": "a3d49bae-abc7-4e11-8476-9ad2ac9ac463",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c2a2ef1b-7b38-4f7c-aabe-258fb695fb5b",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad;KeyboardMouse",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be9919a6-8c46-44ff-a0b2-449817606f7b",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press(behavior=2)",
                    "processors": "Clamp(max=1)",
                    "groups": "KeyboardMouse",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd493237-8c65-4d8b-961e-f9f1a409bb06",
                    "path": "*/{Submit}",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "KeyboardMouse;Gamepad",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3eed784b-c75c-4d15-8ec8-e96895d015b0",
                    "path": "<Keyboard>/BackQuote",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Debug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1a5710a-99a2-4033-8f47-46dab9355f0a",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseMiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15e73d6e-7d92-42fa-afe9-d3536d156ea4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9857762b-435f-433c-8c10-5693573aa119",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf3217aa-e15c-4140-9082-aa2291a3acbf",
                    "path": "*/{Point}",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse;Gamepad",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ae4b0b1-cf3f-49dd-b9bc-010914dccf00",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": []
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": []
        }
    ]
}